Fixes vertical centering for institutions logo that are too wide

--- a/web-app/css/digivol-custom.css
+++ b/web-app/css/digivol-custom.css
@@ -92,7 +92,7 @@ h2.heading > div.subheading {
 .thumbnail.institution div.logo-centre {
     width: 100%;
     height: 225px;
-    padding-top: 25px;
+    padding-top: 10px;
     text-align: center;
     display: table;
 }
@@ -100,6 +100,10 @@ h2.heading > div.subheading {
 .thumbnail.institution div.logo-centre a {
     display: table-cell;
     vertical-align: middle;
+}
+
+.thumbnail.institution .caption {
+    padding-top: 0;
 }
 
 
